updating bg color - aside[floating boxes]

--- a/libs/styles/furniture-elements.less
+++ b/libs/styles/furniture-elements.less
@@ -72,7 +72,7 @@
 
 
 .main-content__sidebar.side-links{
-	background: #dfdfdf;
+	background: #f2f2f2;
 }
 
 .main-content__sidebar.side-links h2{
@@ -92,4 +92,8 @@
 
 .main-content__sidebar a:hover,.main-content__sidebar a:focus{
 	background: none;
+}
+
+.index-page__box .li--arrow li, .home-page__box .li--arrow li{
+	border: none;
 }
