adding old calsses with new styling [hack for old styles]

--- a/libs/styles/furniture-elements.less
+++ b/libs/styles/furniture-elements.less
@@ -97,3 +97,48 @@
 .index-page__box .li--arrow li, .home-page__box .li--arrow li{
 	border: none;
 }
+
+.was-examplebox.box{
+	background-color: #FFF;
+    color: #191926;
+    border: 8px solid #bfbfbf;
+    border-width: 1px;
+    border-left-width: 8px;
+	border-left-width: 0.5rem;
+	padding: .75em 1em;
+    padding: 12px 16px;
+    padding: 0.75rem 1rem;
+    margin: 12px 0;
+    margin: 0.75rem 0;
+    display: block;
+}
+.box--content-right{
+	padding: .75em 1em;
+    padding: 12px 16px;
+    padding: 0.75rem 1rem;
+    margin: 12px 0;
+    margin: 0.75rem 0;
+    display: block;
+    background-color: #caeaff;
+    border: 8px solid #4ab7ff;
+    border-width: 1px;
+    border-left-width: 8px;
+    border-left-width: 0.5rem;
+    background-color: #f2f2f2;
+    color: #191926;
+    border: 8px solid #dfdfdf;
+}
+
+.callout--alert{
+	border: none;
+	border-left: 8px solid #ffc354;
+}
+
+.callout--alert, .dap-panel--important, .highlight--warning, .callout--info{
+	background-color: #fff0d3;
+	color: #191926;
+	border:none;
+    border-left: 8px solid #ffc354;
+    border-left-width: 8px;
+    border-left-width: 0.5rem;
+}
