chaging anchor color,fxing search input and button, well box

--- a/libs/styles/base/variables.less
+++ b/libs/styles/base/variables.less
@@ -93,9 +93,9 @@
  * LINKS
  */
 
-@link-color:            			@blue;
-@link-active-color:    				@blue;
-@link-hover-color:      			@blue;
+@link-color:            			@heritage-blue;
+@link-active-color:    				@heritage-blue;
+@link-hover-color:      			@heritage-blue;
 @link-visited-color:    			@purple-dark;
 
 
