--- a/libs/styles/furniture-elements.less
+++ b/libs/styles/furniture-elements.less
@@ -119,14 +119,14 @@
     margin: 12px 0;
     margin: 0.75rem 0;
     display: block;
-    background-color: #caeaff;
-    border: 8px solid #4ab7ff;
+	background-color: #caeaff;
+    border: 8px solid #dfdfdf;
     border-width: 1px;
     border-left-width: 8px;
     border-left-width: 0.5rem;
     background-color: #f2f2f2;
-    color: #191926;
-    border: 8px solid #dfdfdf;
+	color: #191926;
+	border: none;
 }
 
 .callout--alert{
@@ -141,4 +141,15 @@
     border-left: 8px solid #ffc354;
     border-left-width: 8px;
     border-left-width: 0.5rem;
+}
+
+.search-inline__field {
+	padding-right: 0;
+}
+
+input[type="search"]{
+	border-right: none;
+}
+.search-inline__button > input, .search-inline__button > button{
+	padding: .68em .6em;
 }
