adding fixes for side nav

--- a/libs/styles/furniture-elements.less
+++ b/libs/styles/furniture-elements.less
@@ -53,6 +53,7 @@
 .side-nav__ul--level1 li{
 	list-style-type: none;
 	border-bottom: none;
+	margin: 0;
 }
 
 .side-nav__ul--level1 li a{
@@ -65,14 +66,20 @@
 
 .main-content__sidebar.side-nav * li  ul{
 	margin: 0;  
-} 
+}
+
+
+.main-content__sidebar.side-nav * li a i{
+	padding-right: 5px;
+}
+
 
 .side-nav__ul-level-1 li {
 	list-style-type: none;
 	padding-left: 1.5em;
 }
 .side-nav__ul--level1 li a:hover, .side-nav__ul--level2 li a:hover{
-	color: #003C64; 
+	color: #004b88; 
 	text-decoration: none; 
 	background-color: #e3f4ff;
 	border-radius: 2px;
@@ -161,4 +168,3 @@ input[type="search"]{
 .search-inline__button > input, .search-inline__button > button{
 	padding: .68em .6em;
 }
-
