side nav fixes for list on two lines

--- a/libs/styles/furniture-elements.less
+++ b/libs/styles/furniture-elements.less
@@ -54,6 +54,7 @@
 	list-style-type: none;
 	border-bottom: none;
 	margin: 0;
+	padding-left: 1em;
 }
 
 .side-nav__ul--level1 li a{
@@ -62,6 +63,16 @@
 	padding: .3rem .75rem;
 	display: block;
 	border-bottom: none;
+	padding-left: 1em;
+    text-indent: -0.7em;
+}
+
+ul.side-nav__ul--level2{
+	padding-left: 0;
+}
+
+.side-nav__ul--level2 * li {
+	padding-left: 0;
 }
 
 .main-content__sidebar.side-nav * li  ul{
