--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -15,8 +15,8 @@ block content
 
 				h2(style="margin-top: 0;") Getting started
 				ul
-					li
-						a.a-external(href="http://alphablog.citizensadvice.org.uk/2016/02/principles-for-digital/") Digital principles
+					//- li
+					//- 	a.a-external(href="http://alphablog.citizensadvice.org.uk/2016/02/principles-for-digital/") Digital principles
 					li
 						a(href="accessibility.html") Accessibility
 			.span6-sm
