Remove rogue radio button highlight.

--- a/libs/styles/components/forms.less
+++ b/libs/styles/components/forms.less
@@ -297,7 +297,7 @@ textarea.form__field {
             }
         }
         &:focus {
-            outline: 2px solid @heritage-yellow;
+            outline: none;
         }
         &:focus:before {
             border: 2px solid @heritage-yellow;
