Website notice had incorrect classes in markup.

--- a/libs/jade/features/site-notice.jade
+++ b/libs/jade/features/site-notice.jade
@@ -34,9 +34,9 @@ block content
 
 			pre
 				code.language-html
-					| &lt;div class="section-notice o-flag o-flag--top"&gt;
+					| &lt;div class="sitenotice o-flag o-flag--top"&gt;
 					|	&lt;h2 class="screenreader"&gt;Notice&lt;/h2&gt;
-					|	&lt;div class="section-notice__content"&gt;
+					|	&lt;div class="sitenotice__content"&gt;
 					|		&lt;div class="o-flag__media"&gt;
 					|			&lt;div class="badge"&gt;Notice&lt;/div&gt;
 					| 		&lt;div&gt;
