adding flag, media, all other fixes [example box]

--- a/libs/styles/furniture-elements.less
+++ b/libs/styles/furniture-elements.less
@@ -63,8 +63,6 @@
 	padding: .3rem .75rem;
 	display: block;
 	border-bottom: none;
-	padding-left: 1em;
-    text-indent: -0.7em;
 }
 
 ul.side-nav__ul--level2{
@@ -78,12 +76,6 @@ ul.side-nav__ul--level2{
 .main-content__sidebar.side-nav * li  ul{
 	margin: 0;  
 }
-
-
-.main-content__sidebar.side-nav * li a i{
-	padding-right: 5px;
-}
-
 
 .side-nav__ul-level-1 li {
 	list-style-type: none;
@@ -124,7 +116,7 @@ ul.side-nav__ul--level2{
 	border: none;
 }
 
-.was-examplebox.box{
+.was-examplebox.box, .was-examplebox{
 	background-color: #FFF;
     color: #191926;
     border: 8px solid #bfbfbf;
@@ -177,5 +169,9 @@ input[type="search"]{
 	border-right: none;
 }
 .search-inline__button > input, .search-inline__button > button{
-	padding: .68em .6em;
+	padding: .65em .6em;
 }
+
+ .callout--adviser{
+	 border: none;
+ }
