adding legacy fixes

--- a/libs/styles/furniture-elements.less
+++ b/libs/styles/furniture-elements.less
@@ -172,6 +172,10 @@ input[type="search"]{
 	padding: .65em .6em;
 }
 
- .callout--adviser{
+ .callout--adviser, .dap-panel--adviser{
+	 border: none;
+ }
+
+ .well{
 	 border: none;
  }
