adding top tips styles

--- a/libs/styles/furniture-elements.less
+++ b/libs/styles/furniture-elements.less
@@ -179,3 +179,20 @@ input[type="search"]{
  .well{
 	 border: none;
  }
+
+ .was-toptips2, .was-toptips{
+	padding: .75em 1em;
+    padding: 12px 16px;
+    padding: 0.75rem 1rem;
+    margin: 12px 0;
+    margin: 0.75rem 0;
+    display: block;
+    background-color: #caeaff;
+    border: 8px solid #4ab7ff;
+    border-width: 1px;
+    border-left-width: 8px;
+    border-left-width: 0.5rem;
+    background-color: #f2f2f2;
+    color: #191926;
+    border: none;
+ }
