--- a/libs/styles/modules/revealable.less
+++ b/libs/styles/modules/revealable.less
@@ -54,3 +54,15 @@
         margin-bottom: 0;
     }
 }
+
+/**
+ * Toggle reveables button used on advisor only pages.
+ */
+.c-toggle-all-reveables:after {
+    box-sizing: border-box;
+    font-family: cab-icons;
+    padding-left: .30em;
+}
+
+.c-toggle-all-reveables--is-collapsed:after { content: "\f068"; }
+.c-toggle-all-reveables--is-expanded:after { content: "\f067"; }
