Visual amend to icon in revealable toggle.

--- a/libs/styles/modules/revealable.less
+++ b/libs/styles/modules/revealable.less
@@ -62,7 +62,8 @@
     box-sizing: border-box;
     font-family: cab-icons;
     padding-left: .45em;
-    
+    position: relative;
+    bottom: -.05em; /* align icon to baseline */
 }
 
 .c-toggle-all-reveables--is-collapsed:after { content: "\f067"; }
